# plotly-signif

./: LICENSE  Plot_Box_with_annotation.py  README.md  example.ipynb  plotly_signif.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
src/plotly_signif/: __init__.py
src/plotly_signif.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
