[metadata]
name = plotly-signif
description = A python class of drawing a Bar/Box plot based on the plotly package, with freely definable statistical annotations.
author = ZiChen Wang
author_email = 2148519656@qq.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sydddl/plotly-signif
project_urls =
    Bug Tracker = https://github.com/seanh/gha-python-packaging-demo/issues
    Changelog = https://github.com/seanh/gha-python-packaging-demo/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=2.0.3
    numpy>=1.24.2
    plotly>=5.14.1
    kaleido>=0.0.3

[options.packages.find]
where = src
